--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -476,7 +476,8 @@
         "projectList":"專案清單",
         "procureList":"採購清單",
         "jobCard":"任務卡",
-        "scheduleList":"排程清單"
+        "scheduleList":"排程清單",
+        "logList":"日誌清單"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
